# mofi

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: send_email.py
mofi/: __init__.py  schemas.py  server.py
tests/: test_mofi.py  test_router.py
