[tool.poetry]
name = "mofi"
version = "0.1.0"
description = "Webhook wrapper for ko-fi"
authors = ["Jedddy <jedbalita25@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.3"

[tool.pytest.ini_options]
addopts = "-p no:warnings"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
